Make use of new Thread API