@@ -27,6 +27,7 @@ import java.util.function.Supplier;
 import static com.lapissea.cfs.ConsoleColors.RESET;
 import static com.lapissea.cfs.ConsoleColors.YELLOW_BRIGHT;
 import static com.lapissea.cfs.logging.Log.info;
+import static com.lapissea.cfs.logging.Log.trace;
 import static com.lapissea.cfs.logging.Log.warn;
 import static com.lapissea.cfs.tools.server.ServerCommons.Action;
 import static com.lapissea.cfs.tools.server.ServerCommons.getLocalLoggerImpl;
@@ -124,7 +125,7 @@ public class DisplayIpc implements DataLogger{
 					private boolean fullFlag;
 					
 					{
-						t=new Thread(()->{
+						t=Thread.ofVirtual().name("socket writer").start(()->{
 //							long lastTimeMs  =0;
 //							long writtenBytes=0;
 							
@@ -164,7 +165,7 @@ public class DisplayIpc implements DataLogger{
 							}catch(IOException ex){
 								ex.printStackTrace();
 							}
-						}, "socket writer");
+						});
 						t.start();
 					}
 					
@@ -334,17 +335,16 @@ public class DisplayIpc implements DataLogger{
 				ping=()->tmpProxy.exec(()->sendAction.apply(Action.PING, buff->{}));
 			}
 			
-			var listenThread=new Thread(()->{
-				while(true){
-					try{
+			Thread.ofVirtual().name(name+" poke machine").start(()->{
+				try{
+					while(!socket.isClosed()){
 						ping.run();
 						socketIn.read();
 						UtilL.sleep(1000);
-					}catch(Throwable ignored){}
-				}
-			}, name+" poke machine");
-			listenThread.setDaemon(true);
-			listenThread.start();
+					}
+				}catch(Throwable ignored){}
+				trace("Stopped poking {}", name);
+			});
 			
 			proxy.reset();
 			this.proxy=proxy;
